# ASTRA

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: vision.md
docs/adr/: 0001-agent-operable-research-system.md  0002-use-akshare-as-phase-1-market-data-provider.md  0003-separate-web-knowledge-provider.md  README.md
docs/evaluation/: README.md
docs/harness/: task-template.md
docs/modules/: README.md  theme-research-contract.md
docs/phases/: phase-0-harness-init.md  phase-1-theme-to-pool.md
docs/tasks/: phase-0-task-plan.md  phase-1-task-plan.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/e2e/: health.spec.ts  theme-research.spec.ts
src/astra/: __init__.py
src/astra/api/: __init__.py  app.py
src/astra/theme_research/: __init__.py  coarse_rank.py  contracts.py  deep_rank.py  evidence.py  fixtures.py  market_data.py  market_metadata.py  recall.py  recall_signal_scoring.py  report.py  service.py  web_knowledge.py
tests/integration/: test_akshare_market_data_provider.py  test_deepseek_recall_signal_scoring.py  test_health_api.py  test_theme_research_api.py
tests/unit/: test_health_response.py
tests/unit/theme_research/: test_coarse_rank.py  test_contracts.py  test_deep_rank.py  test_evidence.py  test_fixtures.py  test_market_data.py  test_market_metadata.py  test_recall.py  test_recall_signal_scoring.py  test_report.py  test_service.py  test_web_knowledge.py
(+2 files in other folders)
