[project]
name = "astra"
version = "0.1.0"
description = "Adaptive strategy research and testing agent system."
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.16.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: unit tests for local behavior",
    "integration: integration tests across package boundaries",
    "live: tests that access live external services",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
